# xqlyte

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yml
crates/api-server/: Cargo.toml
crates/api-server/src/: main.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/tests/: snapshot_tests.rs
crates/engine/: Cargo.toml
crates/engine/src/: asset_analyzer.rs  confidence_model.rs  failure_classifier.rs  fee_analyzer.rs  lib.rs  liquidity_analyzer.rs  node_analyzer.rs  route_analyzer.rs  suggestion_engine.rs  types.rs  validator.rs
crates/engine/tests/: integration_test.rs
crates/rpc/: Cargo.toml
crates/rpc/src/: client.rs  lib.rs  live.rs  mock.rs  types.rs
crates/sdk-rust/: Cargo.toml
crates/sdk-rust/src/: lib.rs
crates/sdk-wasm/: Cargo.toml  index.html
crates/sdk-wasm/src/: lib.rs
docs/: ARCHITECTURE.md  DATA_MODELS.md  DEMO_SCRIPT.md  PROJECT_PLAN.md  TASK_BREAKDOWN.md
skills/dashboard-and-bot/: SKILL.md
skills/fiber-domain-knowledge/: SKILL.md
skills/production-grade-engineering/: SKILL.md
skills/rust-core-engine/: SKILL.md
skills/sdk-cli-wasm/: SKILL.md
