[package]
name = "rpc"
version = "0.1.0"
edition = "2024"

[dependencies]
engine = { path = "../engine" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
async-trait = "0.1.86"
thiserror = "1.0.69"

[dev-dependencies]
tokio = { version = "1.52.3", features = ["macros", "rt"] }
