[package]
name = "sdk-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.99"
wasm-bindgen-futures = "0.4.49"
serde-wasm-bindgen = "0.6.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
engine = { path = "../engine" }
rpc = { path = "../rpc" }
sdk-rust = { path = "../sdk-rust" }
